--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h4 class="text-lg font-bold">Alhaj KAddunabi Lubega</h4>
                 </div>
                 <img height="225"
-                    src="/src/guests/Alhaj.jpg"
+                    src="src/guests/Alhaj.jpg"
                     width="225" />
                     <p class="text-center py-4 text-sm text-gray-500 px-20">
                         C.E.O Insurance Regulatory Authority of Uganda.
@@ -68,7 +68,7 @@
                     <h4 class="text-lg font-bold">David Wakyiku</h4>
                 </div>
                 <img height="225"
-                    src="/src/guests/david.png"
+                    src="src/guests/david.png"
                     width="225" />
                     <p class="text-center py-4  text-sm text-gray-500 px-20">
                         Managing Director, Asigma
